[build-system]
requires = [
    "setuptools>=60"
]
build-backend = "setuptools.build_meta"

[project]
name = "marker-pdf"
version = "0.1.3"
description = "Convert PDF to markdown with high speed and accuracy."
authors = [
    {name = "Vik Paruchuri", email = "github@vikas.sh"},
]
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["pdf", "markdown", "ocr", "nlp"]
dependencies = [
    "scikit-learn==1.3.2",
    "Pillow==10.1.0",
    "pytesseract==0.3.10",
    "PyMuPDF==1.23.5",
    "pymupdf-fonts==1.0.5",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "transformers==4.36.2",
    "numpy==1.26.1",
    "python-dotenv==1.0.0",
    "torch==2.3.0",
    "ray[default]",
    "tqdm==4.66.1",
    "tabulate==0.9.0",
    "thefuzz==0.20.0",
    "python-magic==0.4.27",
    "pyspellchecker==0.7.2",
    "ftfy==6.1.1",
    "nltk==3.8.1",
    "ocrmypdf==15.4.0",
    "bitsandbytes==0.41.2.post2",
    "grpcio==1.60.0",
    "texify==0.1.8"
]

[project.scripts]
marker = "convert:main"
marker_single = "convert_single:main"
marker_benchmark = "benchmark:main"
marker_chunk_convert = "chunk_convert:main"

[tool.setuptools.packages.find]
where = ["marker"]

# [tool.setuptools.package-data]
# data_files = [
#     "convert.py",
#     "convert_single.py",
#     "chunk_convert.sh",
#     "benchmark.py",
#     "chunk_convert.py"
# ]
